[gd_scene load_steps=26 format=3 uid="uid://c24oa470hnk0k"]

[ext_resource type="Script" uid="uid://u6ssrki7iggo" path="res://scripts/Seta.gd" id="1_w8tuv"]
[ext_resource type="Texture2D" uid="uid://d32o6gybf4qvn" path="res://Sprites/Seta velocidadef.png" id="2_w8tuv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q042p"]
atlas = ExtResource("2_w8tuv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7sbl"]
atlas = ExtResource("2_w8tuv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ldmm"]
atlas = ExtResource("2_w8tuv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7d4s"]
atlas = ExtResource("2_w8tuv")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r2bu"]
atlas = ExtResource("2_w8tuv")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_51583"]
atlas = ExtResource("2_w8tuv")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqbpc"]
atlas = ExtResource("2_w8tuv")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_en6mr"]
atlas = ExtResource("2_w8tuv")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8ona"]
atlas = ExtResource("2_w8tuv")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrkkm"]
atlas = ExtResource("2_w8tuv")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6516i"]
atlas = ExtResource("2_w8tuv")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb7fo"]
atlas = ExtResource("2_w8tuv")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a503"]
atlas = ExtResource("2_w8tuv")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh6g0"]
atlas = ExtResource("2_w8tuv")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_flbk0"]
atlas = ExtResource("2_w8tuv")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7exnj"]
atlas = ExtResource("2_w8tuv")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kx83"]
atlas = ExtResource("2_w8tuv")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyb1d"]
atlas = ExtResource("2_w8tuv")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uhr8"]
atlas = ExtResource("2_w8tuv")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_evkbb"]
atlas = ExtResource("2_w8tuv")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j85h"]
atlas = ExtResource("2_w8tuv")
region = Rect2(256, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yhipr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q042p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7sbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ldmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7d4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r2bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51583")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqbpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en6mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8ona")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrkkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6516i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb7fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a503")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh6g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flbk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7exnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kx83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyb1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uhr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evkbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j85h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_elvch"]
radius = 20.0
height = 60.0

[node name="Upgrade_Veloc" type="Node2D"]
script = ExtResource("1_w8tuv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yhipr")
autoplay = "default"
frame = 20
frame_progress = 1.0
speed_scale = 3.5

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_elvch")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
