[gd_scene load_steps=6 format=3 uid="uid://chgvbvjob0bj1"]

[ext_resource type="Script" uid="uid://u6ssrki7iggo" path="res://scripts/Seta.gd" id="1_gidng"]
[ext_resource type="Texture2D" uid="uid://cveasakobahy3" path="res://Sprites/Seta Vida.png" id="2_amwuc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g3ay0"]
atlas = ExtResource("2_amwuc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yhipr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3ay0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_elvch"]
radius = 20.0
height = 60.0

[node name="Upgrade_Vida" type="Node2D"]
script = ExtResource("1_gidng")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yhipr")
autoplay = "default"
frame_progress = 0.32150128
speed_scale = 3.5

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_elvch")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
